--- a/res/layout/activity_statistic.xml
+++ b/res/layout/activity_statistic.xml
@@ -22,68 +22,42 @@
         android:stretchColumns="*" >
 
         <TableRow
-            android:id="@+id/tableRow4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal" >
-
-            <TextView
-                android:id="@+id/textView9"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_span="6"
-                android:gravity="center"
-                android:text="Weather Table"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:typeface="serif" >
-            </TextView>
-        </TableRow>
-
-        <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/TextView04"
-                android:text="" >
-            </TextView>
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text=""
+                android:textSize="12sp" />
 
             <TextView
-                android:id="@+id/TextView04"
-                android:text="Feb 7"
+                android:id="@+id/rowMCLValues"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/menstrualCycleLength"
+                android:textSize="12sp"
                 android:textStyle="bold"
-                android:typeface="serif" >
-            </TextView>
+                android:typeface="serif" />
 
             <TextView
-                android:id="@+id/TextView03"
-                android:text="Feb 8"
+                android:id="@+id/rowBLValues"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/bleedingLength"
+                android:textSize="12sp"
                 android:textStyle="bold"
-                android:typeface="serif" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/TextView02"
-                android:text="Feb 9"
-                android:textStyle="bold"
-                android:typeface="serif" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/TextView01"
-                android:text="Feb 10"
-                android:textStyle="bold"
-                android:typeface="serif" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView1"
-                android:text="Feb 11"
-                android:textStyle="bold"
-                android:typeface="serif" >
-            </TextView>
+                android:typeface="serif" />
         </TableRow>
 
         <TableRow
@@ -92,120 +66,106 @@
             android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView2"
-                android:text="Day High"
-                android:textStyle="bold" >
-            </TextView>
+                android:id="@+id/rowAvgValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/avgValue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
             <TextView
-                android:id="@+id/textView3"
-                android:gravity="center_horizontal"
-                android:text="28°F" >
-            </TextView>
+                android:id="@+id/rowAvgMCLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
 
             <TextView
-                android:id="@+id/textView4"
-                android:gravity="center_horizontal"
-                android:text="26°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView5"
-                android:gravity="center_horizontal"
-                android:text="23°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView6"
-                android:gravity="center_horizontal"
-                android:text="17°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView7"
-                android:gravity="center_horizontal"
-                android:text="19°F" >
-            </TextView>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/tableRow2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                android:id="@+id/textView2"
-                android:text="Day Low"
-                android:textStyle="bold" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView3"
-                android:gravity="center_horizontal"
-                android:text="15°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView4"
-                android:gravity="center_horizontal"
-                android:text="14°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView5"
-                android:gravity="center_horizontal"
-                android:text="3°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView6"
-                android:gravity="center_horizontal"
-                android:text="5°F" >
-            </TextView>
-
-            <TextView
-                android:id="@+id/textView7"
-                android:gravity="center_horizontal"
-                android:text="6°F" >
-            </TextView>
+                android:id="@+id/rowAvgBLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
         </TableRow>
 
         <TableRow
             android:id="@+id/tableRow3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center" >
+            android:layout_height="wrap_content" >
 
             <TextView
-                android:id="@+id/textView8"
-                android:text="Conditions"
-                android:textStyle="bold" >
-            </TextView>
+                android:id="@+id/rowMinValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/minValue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
-            <ImageView
-                android:id="@+id/imageView1"
-                android:src="@drawable/one_drop" >
-            </ImageView>
+            <TextView
+                android:id="@+id/rowMinMCLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:src="@drawable/two_drops" >
-            </ImageView>
+            <TextView
+                android:id="@+id/rowMinBLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
+        </TableRow>
 
-            <ImageView
-                android:id="@+id/imageView3"
-                android:src="@drawable/three_drops" >
-            </ImageView>
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-            <ImageView
-                android:id="@+id/imageView4"
-                android:src="@drawable/protected_sex_dark" >
-            </ImageView>
+            <TextView
+                android:id="@+id/rowMaxValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/maxValue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
-            <ImageView
-                android:id="@+id/imageView5"
-                android:src="@drawable/unprotected_sex_dark" >
-            </ImageView>
+            <TextView
+                android:id="@+id/rowMaxMCLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/rowMaxBLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
         </TableRow>
     </TableLayout>
 
