--- a/res/layout/activity_statistic.xml
+++ b/res/layout/activity_statistic.xml
@@ -1,156 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/table"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:shrinkColumns="*"
-    android:stretchColumns="*" >
+    android:orientation="vertical" >
 
-    <TableRow
-        android:id="@+id/tableRow1"
+    <TableLayout
+        android:id="@+id/table"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:shrinkColumns="*"
+        android:stretchColumns="*" >
 
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="left|center_horizontal"
-            android:text=""
-            android:textSize="12sp" />
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/rowMCLValues"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="left|center_horizontal"
-            android:text="@string/menstrualCycleLength"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:typeface="serif" />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text=""
+                android:textSize="12sp" />
 
-        <TextView
-            android:id="@+id/rowBLValues"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="left|center_horizontal"
-            android:text="@string/bleedingLength"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:typeface="serif" />
-    </TableRow>
+            <TextView
+                android:id="@+id/rowMCLValues"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/menstrualCycleLength"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
-    <TableRow
-        android:id="@+id/tableRow2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+            <TextView
+                android:id="@+id/rowBLValues"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/bleedingLength"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/rowAvgValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="left|center_horizontal"
-            android:text="@string/avgValue"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:typeface="serif" />
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/rowAvgMCLValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
+            <TextView
+                android:id="@+id/rowAvgValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/avgValue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
-        <TextView
-            android:id="@+id/rowAvgBLValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
-    </TableRow>
+            <TextView
+                android:id="@+id/rowAvgMCLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
 
-    <TableRow
-        android:id="@+id/tableRow3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+            <TextView
+                android:id="@+id/rowAvgBLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/rowMinValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="left|center_horizontal"
-            android:text="@string/minValue"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:typeface="serif" />
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/rowMinMCLValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
+            <TextView
+                android:id="@+id/rowMinValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/minValue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
-        <TextView
-            android:id="@+id/rowMinBLValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
-    </TableRow>
+            <TextView
+                android:id="@+id/rowMinMCLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
 
-    <TableRow
-        android:id="@+id/tableRow4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+            <TextView
+                android:id="@+id/rowMinBLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
+        </TableRow>
 
-        <TextView
-            android:id="@+id/rowMaxValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="left|center_horizontal"
-            android:text="@string/maxValue"
-            android:textSize="12sp"
-            android:textStyle="bold"
-            android:typeface="serif" />
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/rowMaxMCLValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
+            <TextView
+                android:id="@+id/rowMaxValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="left|center_horizontal"
+                android:text="@string/maxValue"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                android:typeface="serif" />
 
-        <TextView
-            android:id="@+id/rowMaxBLValue"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="" />
-    </TableRow>
+            <TextView
+                android:id="@+id/rowMaxMCLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
 
-</TableLayout>
+            <TextView
+                android:id="@+id/rowMaxBLValue"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="" />
+        </TableRow>
+    </TableLayout>
+
+</ScrollView>
