--- a/res/values-v11/themes.xml
+++ b/res/values-v11/themes.xml
@@ -4,12 +4,12 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo">
 
         <!-- item name="numberPickerStyle">@style/Widget.Holo.NumberPicker</item -->
-        <item name="helpIcon">@drawable/help_dark</item>
-        <item name="rateIcon">@drawable/rate_dark</item>
-        <item name="statisticIcon">@drawable/statistic_dark</item>
-        <item name="clearAllDataIcon">@drawable/discard_dark</item>
-        <item name="importIcon">@drawable/import_dark</item>
-        <item name="exportIcon">@drawable/export_dark</item>
+        <item name="helpIcon">@drawable/ic_menu_help_dark</item>
+        <item name="rateIcon">@drawable/ic_menu_rate_dark</item>
+        <item name="statisticIcon">@drawable/ic_menu_statistic_dark</item>
+        <item name="clearAllDataIcon">@drawable/ic_menu_discard_dark</item>
+        <item name="importIcon">@drawable/ic_menu_import_dark</item>
+        <item name="exportIcon">@drawable/ic_menu_export_dark</item>
         <item name="spinnerItemTextColor">@android:color/white</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/white</item>
@@ -18,12 +18,12 @@
     <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light">
 
         <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
-        <item name="helpIcon">@drawable/help_light</item>
-        <item name="rateIcon">@drawable/rate_light</item>
-        <item name="statisticIcon">@drawable/statistic_light</item>
-        <item name="clearAllDataIcon">@drawable/discard_light</item>
-        <item name="importIcon">@drawable/import_light</item>
-        <item name="exportIcon">@drawable/export_light</item>
+        <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="rateIcon">@drawable/ic_menu_rate_light</item>
+        <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
+        <item name="clearAllDataIcon">@drawable/ic_menu_discard_light</item>
+        <item name="importIcon">@drawable/ic_menu_import_light</item>
+        <item name="exportIcon">@drawable/ic_menu_export_light</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
@@ -35,8 +35,8 @@
         <item name="spinnerItemTextColor">@android:color/white</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/white</item>
-        <item name="nextItemIcon">@drawable/next_item_dark</item>
-        <item name="prevItemIcon">@drawable/previous_item_dark</item>
+        <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
+        <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Holo.Light.Dialog">
@@ -45,8 +45,8 @@
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
-        <item name="nextItemIcon">@drawable/next_item_light</item>
-        <item name="prevItemIcon">@drawable/previous_item_light</item>
+        <item name="nextItemIcon">@drawable/ic_next_item_light</item>
+        <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
     </style>
 
 </resources>
