--- a/res/values-v14/themes.xml
+++ b/res/values-v14/themes.xml
@@ -4,12 +4,12 @@
     <style name="AppBaseThemeLight" parent="android:Theme.Holo.Light.DarkActionBar">
 
         <!-- item name="numberPickerStyle">@style/Widget.Holo.Light.NumberPicker</item -->
-        <item name="helpIcon">@drawable/help_dark</item>
-        <item name="rateIcon">@drawable/rate_dark</item>
-        <item name="statisticIcon">@drawable/statistic_dark</item>
-        <item name="clearAllDataIcon">@drawable/discard_dark</item>
-        <item name="importIcon">@drawable/import_dark</item>
-        <item name="exportIcon">@drawable/export_dark</item>
+        <item name="helpIcon">@drawable/ic_menu_help_dark</item>
+        <item name="rateIcon">@drawable/ic_menu_rate_dark</item>
+        <item name="statisticIcon">@drawable/ic_menu_statistic_dark</item>
+        <item name="clearAllDataIcon">@drawable/ic_menu_discard_dark</item>
+        <item name="importIcon">@drawable/ic_menu_import_dark</item>
+        <item name="exportIcon">@drawable/ic_menu_export_dark</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
