--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -29,12 +29,12 @@
     <style name="AppBaseTheme" parent="android:Theme">
 
         <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
-        <item name="helpIcon">@drawable/help_light</item>
-        <item name="rateIcon">@drawable/rate_light</item>
-        <item name="statisticIcon">@drawable/statistic_light</item>
-        <item name="clearAllDataIcon">@drawable/discard_light</item>
-        <item name="importIcon">@drawable/import_light</item>
-        <item name="exportIcon">@drawable/export_light</item>
+        <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="rateIcon">@drawable/ic_menu_rate_light</item>
+        <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
+        <item name="clearAllDataIcon">@drawable/ic_menu_discard_light</item>
+        <item name="importIcon">@drawable/ic_menu_import_light</item>
+        <item name="exportIcon">@drawable/ic_menu_export_light</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
@@ -43,20 +43,20 @@
     <style name="AppBaseThemeLight" parent="android:Theme.Light">
 
         <!-- item name="numberPickerStyle">@style/Widget.NumberPicker</item -->
-        <item name="helpIcon">@drawable/help_light</item>
-        <item name="rateIcon">@drawable/rate_light</item>
-        <item name="statisticIcon">@drawable/statistic_light</item>
-        <item name="clearAllDataIcon">@drawable/discard_light</item>
-        <item name="importIcon">@drawable/import_light</item>
-        <item name="exportIcon">@drawable/export_light</item>
+        <item name="helpIcon">@drawable/ic_menu_help_light</item>
+        <item name="rateIcon">@drawable/ic_menu_rate_light</item>
+        <item name="statisticIcon">@drawable/ic_menu_statistic_light</item>
+        <item name="clearAllDataIcon">@drawable/ic_menu_discard_light</item>
+        <item name="importIcon">@drawable/ic_menu_import_light</item>
+        <item name="exportIcon">@drawable/ic_menu_export_light</item>
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/black</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
     </style>
 
     <style name="AppTheme" parent="AppBaseTheme">
-        <item name="nextItemIcon">@drawable/next_item_dark</item>
-        <item name="prevItemIcon">@drawable/previous_item_dark</item>
+        <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
+        <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
         <item name="note_bg">@drawable/note_bg_src_dark</item>
         <item name="one_drop_bg">@drawable/one_drop_bg_src_dark</item>
         <item name="two_drops_bg">@drawable/two_drops_bg_src_dark</item>
@@ -66,13 +66,13 @@
         <item name="unprotected_sex_bg">@drawable/unprotected_sex_bg_src_dark</item>
         <item name="took_pill_bg">@drawable/pill_bg_src_dark</item>
         <item name="sex">@drawable/sex_dark</item>
-        <item name="protected_sex">@drawable/protected_sex_dark</item>
-        <item name="unprotected_sex">@drawable/unprotected_sex_dark</item>
+        <item name="protected_sex">@drawable/sex_protected_dark</item>
+        <item name="unprotected_sex">@drawable/sex_unprotected_dark</item>
     </style>
 
     <style name="AppThemeLight" parent="AppBaseThemeLight">
-        <item name="nextItemIcon">@drawable/next_item_light</item>
-        <item name="prevItemIcon">@drawable/previous_item_light</item>
+        <item name="nextItemIcon">@drawable/ic_next_item_light</item>
+        <item name="prevItemIcon">@drawable/ic_previous_item_light</item>
         <item name="note_bg">@drawable/note_bg_src_light</item>
         <item name="one_drop_bg">@drawable/one_drop_bg_src_light</item>
         <item name="two_drops_bg">@drawable/two_drops_bg_src_light</item>
@@ -82,8 +82,8 @@
         <item name="unprotected_sex_bg">@drawable/unprotected_sex_bg_src_light</item>
         <item name="took_pill_bg">@drawable/pill_bg_src_light</item>
         <item name="sex">@drawable/sex_light</item>
-        <item name="protected_sex">@drawable/protected_sex_light</item>
-        <item name="unprotected_sex">@drawable/unprotected_sex_light</item>
+        <item name="protected_sex">@drawable/sex_protected_light</item>
+        <item name="unprotected_sex">@drawable/sex_unprotected_light</item>
     </style>
 
     <style name="DialogBaseTheme" parent="android:Theme.Dialog">
@@ -92,8 +92,8 @@
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
-        <item name="nextItemIcon">@drawable/next_item_dark</item>
-        <item name="prevItemIcon">@drawable/previous_item_dark</item>
+        <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
+        <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
     </style>
 
     <style name="DialogBaseThemeLight" parent="android:Theme.Dialog">
@@ -102,8 +102,8 @@
         <item name="spinnerItemTextColor">@android:color/black</item>
         <item name="textViewTextColor">@android:color/white</item>
         <item name="editableTextViewTextColor">@android:color/black</item>
-        <item name="nextItemIcon">@drawable/next_item_dark</item>
-        <item name="prevItemIcon">@drawable/previous_item_dark</item>
+        <item name="nextItemIcon">@drawable/ic_next_item_dark</item>
+        <item name="prevItemIcon">@drawable/ic_previous_item_dark</item>
     </style>
 
     <style name="DialogTheme" parent="DialogBaseTheme">
